@@ -2,10 +2,12 @@ plugins {
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
+    id 'org.beryx.runtime' version '2.0.1'
+    id 'edu.sc.seis.launch4j' version '3.0.6'
 }
 
 group = 'naromil.qcsimple'
-version = '1.0-SNAPSHOT'
+version = '1.0.0'
 
 repositories {
     mavenCentral()
@@ -30,4 +32,43 @@ test {
 
 application {
     mainClass = 'io.github.naromil.qcsimple.main.Launcher'
+}
+
+runtime {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    modules = ['java.desktop', 'java.logging', 'java.scripting', 'jdk.unsupported'] // Add non-UI standard library modules your app needs
+
+    jpackage {
+        imageName = "QCSimple"
+        appVersion = "1.0.0"
+
+        jvmArgs = [
+            '--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+            '-Dprism.verbose=false'
+        ]
+
+        // Windows specific configurations
+        if (System.getProperty("os.name").toLowerCase().contains("win")) {
+            installerOptions = ['--win-dir-chooser', '--win-shortcut', '--win-menu']
+            imageOptions = ['--icon', 'src/main/resources/io/github/naromil/qcsimple/main/icon.ico']
+        }
+
+        // Linux specific configurations
+        if (System.getProperty("os.name").toLowerCase().contains("linux")) {
+            installerOptions = ['--linux-shortcut', '--linux-deb-maintainer', 'your-email@domain.com']
+            imageOptions = ['--icon', 'src/main/resources/io/github/naromil/qcsimple/main/icon.png']
+        }
+    }
+}
+
+launch4j {
+    mainClassName = 'io.github.naromil.qcsimple.main.Launcher'
+    icon = "${projectDir}/src/main/resources/io/github/naromil/qcsimple/main/icon.ico"
+    outputDir = "libs"
+    dontWrapJar = false
+    headerType = "gui"
+    windowTitle = "Quarterchunk Simple"
+
+    // Just this line is needed to link the JRE
+    bundledJrePath = "runtime"
 }
